--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -8055,23 +8055,23 @@
   os_family: Android
   browser_family: Chrome
 -
-  user_agent: Mozilla/5.0 (Linux; Android 10; YOK-AN10 Build/HONORYOR-AN00; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/77.0.3865.120
+  user_agent: Mozilla/5.0 (Linux; Android 10; YOK-AN10; HMSCore 6.1.0.314) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.106 HuaweiBrowser/11.0.8.301 Mobile Safari/537.36
   os:
     name: Android
     version: "10"
     platform: ""
   client:
     type: browser
-    name: Chrome Webview
-    version: 77.0.3865.120
-    engine: Blink
-    engine_version: ""
+    name: Huawei Browser
+    version: 11.0.8.301
+    engine: WebKit
+    engine_version: "537.36"
   device:
     type: smartphone
     brand: Huawei
     model: Honor V40
   os_family: Android
-  browser_family: Chrome
+  browser_family: Unknown
 -
   user_agent: Mozilla/5.0 (Linux; Android 10; DT1902A Build/QKQ1.191222.002; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/78.0.3904.62
   os:
